cmake_minimum_required(VERSION 3.29)
project(C)

set(CMAKE_CXX_STANDARD 20)

add_executable(C main.cpp
        YIBENTONG/04_HelloWorld.cpp
        YIBENTONG/04_HelloWorld.cpp
        Test/04_I_LOVE_C++.cpp
        YIBENTONG/等腰三角形.cpp
        YIBENTONG/牛牧.cpp
        YIBENTONG/地球人口承载极限.cpp
        YIBENTONG/求三个整数的和.cpp
        YIBENTONG/买图书.cpp
        YIBENTONG/A+B问题.cpp
        YIBENTONG/计算.cpp
        YIBENTONG/计算2.cpp
        YIBENTONG/取余.cpp
        YIBENTONG/计算分数的浮点数值.cpp
        YIBENTONG/1414：【17NOIP普及组】成绩.cpp
        YIBENTONG/2069糖果游戏.cpp
        YIBENTONG/测试.cpp
        YIBENTONG/1024保留3位小数的浮点数.cpp
        YIBENTONG/1011甲流疫情死亡率.cpp
        YIBENTONG/2053三个数.cpp
        YIBENTONG/2058计算器.cpp
        YIBENTONG/2059买笔.cpp
        YIBENTONG/2059买笔.cpp
        YIBENTONG/1057计算器.cpp
        YIBENTONG/1026空格分隔.cpp
        YIBENTONG/1032大象查水喝.cpp
        YIBENTONG/实数是否为整数.cpp
        YIBENTONG/1083计算星期几.cpp
        YIBENTONG/1034计算三角形面积.cpp
        YIBENTONG/1085求弹跳高度的计算.cpp
        "YanAn/#J0016苹果采购.cpp"
        "YanAn/#ABC365B次大值.cpp"
        "YanAn/#比赛_优惠购物.cpp"
        "YanAn/#B星期几考试.cpp"
        "YanAn/#比赛F肥胖问题.cpp"
        Luogu/P1421小玉买文具.cpp
        Luogu/P1909[NOIP2016普及组]买铅笔.cpp
        Luogu/P1089[NOIP2004提高组]津津的储蓄计划.cpp
        Luogu/P1085.cpp
        Luogu/P1055ISBN.cpp
        Luogu/P4414ABC.cpp
        Luogu/P3954成绩.cpp
        Luogu/P5711闰年判断.cpp
        Luogu/P5718找最小值.cpp
        YIBENTONG/2030赵素数.cpp
        YIBENTONG/2032分解质因数.cpp
        YIBENTONG/2032分解质因数.cpp
        YIBENTONG/2032分解质因数.cpp
        YIBENTONG/1096数字统计.cpp
        YIBENTONG/1074津津的储蓄计划.cpp
        YIBENTONG/第n小的质数.cpp
        Luogu/P5705数字反转.cpp
        Luogu/P5708三角形面积.cpp
        Luogu/B2029大象喝水.cpp
        Luogu/P2433小学数学N合一.cpp
        "YanAn/#A明天.cpp"
        "YanAn/#B吃糖.cpp"
        "YanAn/#C彩虹骰子.cpp"
        FJSanZhong/第一期_A逆序输出NX.cpp
        FJSanZhong/第一期_B判断三角形sjx.cpp
        "YanAn/#D和为偶数.cpp"
        Test/判断偶数.cpp
        Test/爱心代码.cpp
        Luogu/P2141珠心算测验.cpp
        Luogu/P5594模拟赛.cpp
        "YanAn/#H移树.cpp"
        "YanAn/#l计算阶乘.cpp"
        Luogu/P2388阶乘之乘.cpp
        "YanAn/#I计算阶乘.cpp"
        Luogu/P1308统计单词数.cpp
        Test/字符能否相加.cpp
        Test/字符串会不会被空格自动创掉.cpp
        Test/如何统计空格数量.cpp
        Test/Find函数.cpp
        Luogu/P1002过河卒.cpp
        Luogu/P1009阶乘之和.cpp
        Luogu/P5720一尺之锤.cpp
        Luogu/P5721数字直角三角形.cpp
        Luogu/P5722数列求和.cpp
        Luogu/P1217回文质数.cpp
        Test/回文数.cpp
        Luogu/P1423小玉在游泳.cpp
        Test/第5201314个质数.cpp
        Luogu/P5724极差最大跨度值最大值和最小值的差.cpp
        Luogu/P5725求三角形.cpp
        Luogu/P5726打分.cpp
        Luogu/P1428小鱼比可爱.cpp
        Luogu/P5728旗鼓相当的对手.cpp
        Test/memset函数.cpp
        Luogu/P5730显示屏.cpp
        Luogu/P2615神奇的幻方.cpp
        Luogu/P5729工艺品制作.cpp
        Luogu/P5736质数筛选.cpp
        Luogu/P5738歌唱比赛.cpp
        Test/Find函数测试.cpp
        Luogu/P5740最厉害的学生.cpp
        Test/ASCII码空格.cpp
        Luogu/P1554梦中的统计.cpp
        Luogu/P1205方块转换.cpp
        Luogu/P1553数字反转upgrade.cpp
        Test/sizeof怎么用.cpp
        Test/字符串强改整数类型.cpp
        Luogu/P1012拼数.cpp
        YanAn/2025425生成元.cpp
        YanAn/2025425农场.cpp
        YanAn/2025427骨牌铺方格.cpp
        FJSanZhong/24CSPJ普及组explore.cpp
        YanAn/202551换了赛A概率.cpp
        YanAn/2025430B字符串.cpp
        YanAn/2025430C韩信点兵.cpp
        YanAn/20250430D买票.cpp
        YanAn/20250430F蚂蚁.cpp
        YanAn/20250430E分数.cpp
        Luogu/P1957口算练习题.cpp
        Test/通过除等于获取长度.cpp
        Luogu/P1553数字反转（升级版）.cpp
        Test/6980358432985int存储.cpp
        Luogu/P5733自动修正.cpp
        Test/char为什么不能加int.cpp
        Luogu/P1914小书童.cpp
        Test/四舍五入函数.cpp
)
